<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TimeTracker</string>

    <string name="main_label_customer">Kunde</string>
    <string name="main_label_project">Projekt</string>
    <string name="main_tab_startstop">Einstempeln</string>
    <string name="main_tab_statistics">Überblick</string>

    <string name="jobstarter_start">Start</string>
    <string name="jobstarter_stop">Stop</string>

    <string name="newcustomer_title">Neuen Kunden anlegen</string>
    <string name="newcustomer_dialog_cannotsave">Bitte füllen Sie alle notwendigen Felder aus.</string>

    <string name="newproject_title">Neues Projekt anlegen</string>
    <string name="newproject_label_customer">Kunde:</string>
    <string name="newproject_label_title">Names des Projekts:</string>
    <string name="newproject_label_identifier">Kennziffer:</string>
    <string name="newproject_label_comment">Bemerkung:</string>

    <string name="menu_jobstarter_newcustomer">Neuer Kunde</string>
    <string name="menu_jobstarter_newproject">Neues Projekt</string>

    <string name="menu_statistics_week">Woche</string>
    <string name="menu_statistics_month">Monat</string>
    <string name="menu_statistics_year">Jahr</string>
    <string name="menu_statistics_total">Gesamt</string>
    <string name="menu_newcustomer_save">Speichern</string>
    <string name="menu_newcustomer_cancel">Abbrechen</string>

    <string name="actionmode_save">Speichern</string>
    <string name="actionmode_cancel">Abbrechen</string>
</resources>
